# gecko-controller

./: .gitignore  MANIFEST.in  Makefile  README.md  TODO.txt  all.txt  build.sh  build_deb.sh  clean.sh  cleanup_mqtt_test.py  clear_binary_sensors.py  config.py  conftest.py  dump_all.py  fix_mqtt_binary.py  install.sh  install_build_deps.sh  manifest.in  pyproject.toml  readings.csv  release.sh  set_i2c_baud.sh  setup.py  test.sh  test.txt  test_mqtt.py  version.py
.github/workflows/: build-package.yml  pr-build.yml
.pybuild/cpython3_3.11_gecko_controller/: .pydistutils.cfg
debian/: changelog  conffiles  config.py  control  debhelper-build-stamp  files  gecko-controller.postinst.debhelper  gecko-controller.postrm.debhelper  gecko-controller.prerm.debhelper  gecko-controller.service  gecko-controller.substvars  gecko-web.service  gecko-web.sh  install  postinst  postrm  rules
gecko_controller/: as7331.py  config_loader.py  controller.py  display_socket.py  gecko_controller.py  mqtt_client.py  ssh1106.py  version.py
gecko_controller.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
system-improvements/: dc-dc-filtering-details.md  gecko-controller-watchdog.py  gecko-controller.service.enhanced  gecko-controller.service.working  gecko-health-check.service  gecko-health-check.sh  gecko-health-check.timer  gecko-recovery.sh  i2c-hardware-solutions.md  i2c-resilient-wrapper.py  install-gecko-improvements.sh  iso1640-comparison.md  isolated-power-explanation.md  setup-hardware-watchdog.sh
tests/: conftest.py  test_utils.py
tools/: build.py  bump-version.sh  check_hardware.py  frontend.py  package.py  reset_i2c.sh  verify-versions.sh
(+34 files in other folders)
