[tool.poetry]
name = "gecko-controller"
version = "0.1.0"
description = "Raspberry Pi-based temperature and light controller for gecko enclosure"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "gecko_controller"}]

[tool.poetry.dependencies]
python = "^3.9"
RPi.GPIO = "^0.7.1"
adafruit-circuitpython-displayio-sh1107 = "^1.5.3"
adafruit-circuitpython-display-text = "^2.22.6"
adafruit-circuitpython-bitmap-font = "^1.5.11"
smbus = "^1.1.post2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gecko-controller = "gecko_controller.controller:main"
