[tool.poetry]
name = "gecko-controller"
version = "0.7.8"
description = "Raspberry Pi-based temperature, light and UV controller for gecko enclosure"
authors = ["Ian Ross Williams <ianrosswilliams@gmail.com>"]
readme = "README.md"
packages = [{include = "gecko_controller"}]

[tool.poetry.dependencies]
python = "^3.9"
RPi.GPIO = "^0.7.1"
smbus2 = "^0.4.3"
Pillow = "^10.2.0"
Flask = "^3.0.0"
adafruit-circuitpython-busdevice = "^5.2.6"

[tool.poetry.scripts]
gecko-controller = "gecko_controller.controller:main"
gecko-web = "gecko_controller.web.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.package]
include = [
    "gecko_controller/web/templates/*",
    "gecko_controller/web/static/*",
    "gecko_controller/as7331.py",
]
